<resources>
    <string name="app_name">Gather</string>
    <string name="home">HOME</string>
    <string name="explore">EXPLORE</string>
    <string name="settings">SETTINGS</string>
    <string name="myEvents">My Events</string>
    <string name="discover">Discover!</string>
    <string name="addEvent">Add Public Event</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="save">Save Event</string>
    <string name="pickDate">Set Date of Event</string>
    <string name="pickTime">Set Time of Event</string>
    <string name="emptyDate">__/__/__</string>
    <string name="emptyTime">__:__ AM/PM</string>
    <string name="categoryLabel">Choose an event category:</string>
    <string name="noEvents">You have no upcoming Events</string>
    <string name="toExplore">Click to Explore!</string>
    <string name="Music">Music</string>
    <string name="Community">Community</string>
    <string name="Business">Business</string>
    <string name="Sports">Sports</string>
    <string name="Other">Other</string>
    <string name="nointerest">Event exists but there is no interest!</string>

    <string-array name="categories">
        <item>Business</item>
        <item>Community</item>
        <item>Music</item>
        <item>Sports</item>
        <item>Other</item>
    </string-array>
</resources>
