<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sweettooth.cs.brandeis.edu.eventsapp.AddEvent">

    <TextView
        android:id="@+id/addEvent"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addEvent"/>

    <EditText
        android:id="@+id/event_title"
        android:layout_below="@+id/addEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/event_description"
        android:layout_below="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/description"/>
<!--
    <DatePicker
        android:id="@+id/event_datepicker"
        android:layout_below="@+id/event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TimePicker
        android:id="@+id/event_timepicker"
        android:layout_below="@+id/event_datepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
-->

    <TextView
        android:id="@+id/catergory_label"
        android:layout_below="@+id/event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categoryLabel"/>

    <Spinner
        android:id="@+id/event_category"
        android:layout_below="@+id/catergory_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/save"
        android:layout_below="@+id/event_category"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
